--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="branding docs-branding">
             <div class="container-fluid position-relative py-2">
                 <div class="docs-logo-wrapper">
-	                <div class="site-logo"><a class="navbar-brand" href="index.html"><img class="logo-icon me-2" src="assets/images/coderdocs-logo.svg" alt="logo"><span class="logo-text">Coder<span class="text-alt">Docs</span></span></a></div>    
+	                <div class="site-logo"><a class="navbar-brand" href="index.html"><img src="assets/images/avm-logo.svg" style="margin-top: -8px;height:69px"></a></div> 
                 </div><!--//docs-logo-wrapper-->
 	            <div class="docs-top-utilities d-flex justify-content-end align-items-center">
 	
@@ -49,7 +49,7 @@
 	    <div class="theme-bg-shapes-right"></div>
 	    <div class="theme-bg-shapes-left"></div>
 	    <div class="container">
-		    <h1 class="page-heading single-col-max mx-auto">Documentation</h1>
+		    <h1 class="page-heading single-col-max mx-auto">Guia do Professor AVM</h1>
 		    <div class="page-intro single-col-max mx-auto">Everything you need to get your software documentation online.</div>
 		    <div class="main-search-box pt-3 d-block mx-auto">
                  <form class="search-form w-100">
